set(SRC_FILES
    src/AppendGeometryToSNSNexus.cpp
    src/BankPulseTimes.cpp
    src/CheckMantidVersion.cpp
    src/CompressEvents.cpp
    src/CreateChunkingFromInstrument.cpp
    src/CreateSampleShape.cpp
    src/CreateSimulationWorkspace.cpp
    src/DataBlock.cpp
    src/DataBlockComposite.cpp
    src/DataBlockGenerator.cpp
    src/DefaultEventLoader.cpp
    src/DefineGaugeVolume.cpp
    src/DeleteTableRows.cpp
    src/DetermineChunking.cpp
    src/DownloadFile.cpp
    src/DownloadInstrument.cpp
    src/EventWorkspaceCollection.cpp
    src/ExtractMonitorWorkspace.cpp
    src/ExtractPolarizationEfficiencies.cpp
    src/FilterEventsByLogValuePreNexus.cpp
    src/FindDetectorsInShape.cpp
    src/FindDetectorsPar.cpp
    src/GenerateGroupingPowder.cpp
    src/GroupDetectors.cpp
    src/GroupDetectors2.cpp
    src/H5Util.cpp
    src/ISISDataArchive.cpp
    src/ISISJournal.cpp
    src/ISISRunLogs.cpp
    src/Load.cpp
    src/LoadANSTOHelper.cpp
    src/LoadAscii.cpp
    src/LoadAscii2.cpp
    src/LoadAsciiStl.cpp
    src/LoadBBY.cpp
    src/LoadBankFromDiskTask.cpp
    src/LoadBinaryStl.cpp
    src/LoadCalFile.cpp
    src/LoadCanSAS1D.cpp
    src/LoadCanSAS1D2.cpp
    src/LoadDaveGrp.cpp
    src/LoadDetectorInfo.cpp
    src/LoadDetectorsGroupingFile.cpp
    src/LoadDiffCal.cpp
    src/LoadDspacemap.cpp
    src/LoadEMU.cpp
    src/LoadEmptyInstrument.cpp
    src/LoadEventNexus.cpp
    src/LoadEventNexusIndexSetup.cpp
    src/LoadEventPreNexus2.cpp
    src/LoadFITS.cpp
    src/LoadFullprofResolution.cpp
    src/LoadGSASInstrumentFile.cpp
    src/LoadGSS.cpp
    src/LoadGeometry.cpp
    src/LoadHFIRSANS.cpp
    src/LoadIDFFromNexus.cpp
    src/LoadILLDiffraction.cpp
    src/LoadILLIndirect2.cpp
    src/LoadILLSANS.cpp
    src/LoadILLTOF2.cpp
    src/LoadISISNexus2.cpp
    src/LoadInstrument.cpp
    src/LoadInstrumentFromNexus.cpp
    src/LoadInstrumentFromRaw.cpp
    src/LoadIsawDetCal.cpp
    src/LoadLLB.cpp
    src/LoadLog.cpp
    src/LoadMLZ.cpp
    src/LoadMappingTable.cpp
    src/LoadMask.cpp
    src/LoadMcStas.cpp
    src/LoadMcStasNexus.cpp
    src/LoadMuonLog.cpp
    src/LoadMuonNexus.cpp
    src/LoadMuonNexus1.cpp
    src/LoadMuonNexus2.cpp
    src/LoadNXSPE.cpp
    src/LoadNXcanSAS.cpp
    src/LoadNexus.cpp
    src/LoadNexusLogs.cpp
    src/LoadNexusMonitors.cpp
    src/LoadNexusMonitors2.cpp
    src/LoadNexusProcessed.cpp
    src/LoadNexusProcessed2.cpp
    src/LoadOff.cpp
    src/LoadNGEM.cpp
    src/LoadPDFgetNFile.cpp
    src/LoadPLN.cpp
    src/LoadPSIMuonBin.cpp
    src/LoadParameterFile.cpp
    src/LoadPreNexus.cpp
    src/LoadPreNexusMonitors.cpp
    src/LoadQKK.cpp
    src/LoadRKH.cpp
    src/LoadRaw/byte_rel_comp.cpp
    src/LoadRaw/isisraw.cpp
    src/LoadRaw/isisraw2.cpp
    src/LoadRaw/item_struct.cpp
    src/LoadRaw/vms_convert.cpp
    src/LoadRaw3.cpp
    src/LoadRawBin0.cpp
    src/LoadRawHelper.cpp
    src/LoadRawSpectrum0.cpp
    src/LoadSESANS.cpp
    src/LoadSINQFocus.cpp
    src/LoadSNSspec.cpp
    src/LoadSPE.cpp
    src/LoadSampleDetailsFromRaw.cpp
    src/LoadSampleEnvironment.cpp
    src/LoadSampleShape.cpp
    src/LoadSassena.cpp
    src/LoadSpec.cpp
    src/LoadSpice2D.cpp
    src/LoadSpiceAscii.cpp
    src/LoadSpiceXML2DDet.cpp
    src/LoadStl.cpp
    src/LoadSwans.cpp
    src/LoadTBL.cpp
    src/LoadTOFRawNexus.cpp
    src/MaskDetectors.cpp
    src/MaskDetectorsInShape.cpp
    src/MaskSpectra.cpp
    src/MeshFileIO.cpp
    src/ModifyDetectorDotDatFile.cpp
    src/MoveInstrumentComponent.cpp
    src/NexusTester.cpp
    src/ORNLDataArchive.cpp
    src/PDLoadCharacterizations.cpp
    src/ParallelEventLoader.cpp
    src/PatchBBY.cpp
    src/ProcessBankData.cpp
    src/RawFileInfo.cpp
    src/ReadMaterial.cpp
    src/RemoveLogs.cpp
    src/RenameLog.cpp
    src/RotateInstrumentComponent.cpp
    src/RotateSource.cpp
    src/SampleEnvironmentFactory.cpp
    src/SampleEnvironmentSpec.cpp
    src/SampleEnvironmentSpecParser.cpp
    src/SaveAscii.cpp
    src/SaveAscii2.cpp
    src/SaveBankScatteringAngles.cpp
    src/SaveCSV.cpp
    src/SaveCalFile.cpp
    src/SaveCanSAS1D.cpp
    src/SaveCanSAS1D2.cpp
    src/SaveDaveGrp.cpp
    src/SaveDetectorsGrouping.cpp
    src/SaveDiffCal.cpp
    src/SaveDiffFittingAscii.cpp
    src/SaveDspacemap.cpp
    src/SaveFITS.cpp
    src/SaveFocusedXYE.cpp
    src/SaveFullprofResolution.cpp
    src/SaveGDA.cpp
    src/SaveGSASInstrumentFile.cpp
    src/SaveGSS.cpp
    src/SaveISISNexus.cpp
    src/SaveIsawDetCal.cpp
    src/SaveMask.cpp
    src/SaveNISTDAT.cpp
    src/SaveNXSPE.cpp
    src/SaveNXTomo.cpp
    src/SaveNXcanSAS.cpp
    src/SaveNexus.cpp
    src/SaveNexusESS.cpp
    src/SaveNexusGeometry.cpp
    src/SaveNexusProcessed.cpp
    src/SaveOpenGenieAscii.cpp
    src/SavePAR.cpp
    src/SavePDFGui.cpp
    src/SavePHX.cpp
    src/SaveParameterFile.cpp
    src/SaveRKH.cpp
    src/SaveRMCProfile.cpp
    src/SaveSESANS.cpp
    src/SaveSPE.cpp
    src/SaveSampleEnvironmentAndShape.cpp
    src/SaveStl.cpp
    src/SaveTBL.cpp
    src/SaveToSNSHistogramNexus.cpp
    src/SaveVTK.cpp
    src/SetBeam.cpp
    src/SetSample.cpp
    src/SetSampleMaterial.cpp
    src/SetScalingPSD.cpp
    src/SortTableWorkspace.cpp
    src/StartAndEndTimeFromNexusFileExtractor.cpp
    src/UpdateInstrumentFromFile.cpp
    src/XmlHandler.cpp)

set(INC_FILES
    inc/MantidDataHandling/AppendGeometryToSNSNexus.h
    inc/MantidDataHandling/BankPulseTimes.h
    inc/MantidDataHandling/CheckMantidVersion.h
    inc/MantidDataHandling/CompressEvents.h
    inc/MantidDataHandling/CreateChunkingFromInstrument.h
    inc/MantidDataHandling/CreateSampleShape.h
    inc/MantidDataHandling/CreateSimulationWorkspace.h
    inc/MantidDataHandling/DataBlock.h
    inc/MantidDataHandling/DataBlockComposite.h
    inc/MantidDataHandling/DataBlockGenerator.h
    inc/MantidDataHandling/DefaultEventLoader.h
    inc/MantidDataHandling/DefineGaugeVolume.h
    inc/MantidDataHandling/DeleteTableRows.h
    inc/MantidDataHandling/DetermineChunking.h
    inc/MantidDataHandling/DownloadFile.h
    inc/MantidDataHandling/DownloadInstrument.h
    inc/MantidDataHandling/EventWorkspaceCollection.h
    inc/MantidDataHandling/ExtractMonitorWorkspace.h
    inc/MantidDataHandling/ExtractPolarizationEfficiencies.h
    inc/MantidDataHandling/FilterEventsByLogValuePreNexus.h
    inc/MantidDataHandling/FindDetectorsInShape.h
    inc/MantidDataHandling/FindDetectorsPar.h
    inc/MantidDataHandling/GenerateGroupingPowder.h
    inc/MantidDataHandling/GroupDetectors.h
    inc/MantidDataHandling/GroupDetectors2.h
    inc/MantidDataHandling/H5Util.h
    inc/MantidDataHandling/ISISDataArchive.h
    inc/MantidDataHandling/ISISJournal.h
    inc/MantidDataHandling/ISISRunLogs.h
    inc/MantidDataHandling/Load.h
    inc/MantidDataHandling/LoadANSTOEventFile.h
    inc/MantidDataHandling/LoadANSTOHelper.h
    inc/MantidDataHandling/LoadAscii.h
    inc/MantidDataHandling/LoadAscii2.h
    inc/MantidDataHandling/LoadAsciiStl.h
    inc/MantidDataHandling/LoadBBY.h
    inc/MantidDataHandling/LoadBankFromDiskTask.h
    inc/MantidDataHandling/LoadBinaryStl.h
    inc/MantidDataHandling/LoadCalFile.h
    inc/MantidDataHandling/LoadCanSAS1D.h
    inc/MantidDataHandling/LoadCanSAS1D2.h
    inc/MantidDataHandling/LoadDaveGrp.h
    inc/MantidDataHandling/LoadDetectorInfo.h
    inc/MantidDataHandling/LoadDetectorsGroupingFile.h
    inc/MantidDataHandling/LoadDiffCal.h
    inc/MantidDataHandling/LoadDspacemap.h
    inc/MantidDataHandling/LoadEMU.h
    inc/MantidDataHandling/LoadEmptyInstrument.h
    inc/MantidDataHandling/LoadEventNexus.h
    inc/MantidDataHandling/LoadEventNexusIndexSetup.h
    inc/MantidDataHandling/LoadEventPreNexus2.h
    inc/MantidDataHandling/LoadFITS.h
    inc/MantidDataHandling/LoadFullprofResolution.h
    inc/MantidDataHandling/LoadGSASInstrumentFile.h
    inc/MantidDataHandling/LoadGSS.h
    inc/MantidDataHandling/LoadGeometry.h
    inc/MantidDataHandling/LoadHFIRSANS.h
    inc/MantidDataHandling/LoadIDFFromNexus.h
    inc/MantidDataHandling/LoadILLDiffraction.h
    inc/MantidDataHandling/LoadILLIndirect2.h
    inc/MantidDataHandling/LoadILLSANS.h
    inc/MantidDataHandling/LoadILLTOF2.h
    inc/MantidDataHandling/LoadISISNexus2.h
    inc/MantidDataHandling/LoadInstrument.h
    inc/MantidDataHandling/LoadInstrumentFromNexus.h
    inc/MantidDataHandling/LoadInstrumentFromRaw.h
    inc/MantidDataHandling/LoadIsawDetCal.h
    inc/MantidDataHandling/LoadLLB.h
    inc/MantidDataHandling/LoadLog.h
    inc/MantidDataHandling/LoadMLZ.h
    inc/MantidDataHandling/LoadMappingTable.h
    inc/MantidDataHandling/LoadMask.h
    inc/MantidDataHandling/LoadMcStas.h
    inc/MantidDataHandling/LoadMcStasNexus.h
    inc/MantidDataHandling/LoadMuonLog.h
    inc/MantidDataHandling/LoadMuonNexus.h
    inc/MantidDataHandling/LoadMuonNexus1.h
    inc/MantidDataHandling/LoadMuonNexus2.h
    inc/MantidDataHandling/LoadNXSPE.h
    inc/MantidDataHandling/LoadNXcanSAS.h
    inc/MantidDataHandling/LoadNexus.h
    inc/MantidDataHandling/LoadNexusLogs.h
    inc/MantidDataHandling/LoadNexusMonitors.h
    inc/MantidDataHandling/LoadNexusMonitors2.h
    inc/MantidDataHandling/LoadNexusProcessed.h
    inc/MantidDataHandling/LoadNexusProcessed2.h
    inc/MantidDataHandling/LoadOff.h
    inc/MantidDataHandling/LoadNGEM.h
    inc/MantidDataHandling/LoadPDFgetNFile.h
    inc/MantidDataHandling/LoadPLN.h
    inc/MantidDataHandling/LoadPSIMuonBin.h
    inc/MantidDataHandling/LoadParameterFile.h
    inc/MantidDataHandling/LoadPreNexus.h
    inc/MantidDataHandling/LoadPreNexusMonitors.h
    inc/MantidDataHandling/LoadQKK.h
    inc/MantidDataHandling/LoadRKH.h
    inc/MantidDataHandling/LoadRaw3.h
    inc/MantidDataHandling/LoadRawBin0.h
    inc/MantidDataHandling/LoadRawHelper.h
    inc/MantidDataHandling/LoadRawSpectrum0.h
    inc/MantidDataHandling/LoadSESANS.h
    inc/MantidDataHandling/LoadSINQFocus.h
    inc/MantidDataHandling/LoadSNSspec.h
    inc/MantidDataHandling/LoadSPE.h
    inc/MantidDataHandling/LoadSampleDetailsFromRaw.h
    inc/MantidDataHandling/LoadSampleEnvironment.h
    inc/MantidDataHandling/LoadSampleShape.h
    inc/MantidDataHandling/LoadSassena.h
    inc/MantidDataHandling/LoadSpec.h
    inc/MantidDataHandling/LoadSpice2D.h
    inc/MantidDataHandling/LoadSpiceAscii.h
    inc/MantidDataHandling/LoadSpiceXML2DDet.h
    inc/MantidDataHandling/LoadStl.h
    inc/MantidDataHandling/LoadStlFactory.h
    inc/MantidDataHandling/LoadSwans.h
    inc/MantidDataHandling/LoadTBL.h
    inc/MantidDataHandling/LoadTOFRawNexus.h
    inc/MantidDataHandling/MaskDetectors.h
    inc/MantidDataHandling/MaskDetectorsInShape.h
    inc/MantidDataHandling/MaskSpectra.h
    inc/MantidDataHandling/MeshFileIO.h
    inc/MantidDataHandling/ModifyDetectorDotDatFile.h
    inc/MantidDataHandling/MoveInstrumentComponent.h
    inc/MantidDataHandling/NXcanSASDefinitions.h
    inc/MantidDataHandling/NexusTester.h
    inc/MantidDataHandling/ORNLDataArchive.h
    inc/MantidDataHandling/PDLoadCharacterizations.h
    inc/MantidDataHandling/ParallelEventLoader.h
    inc/MantidDataHandling/PatchBBY.h
    inc/MantidDataHandling/ProcessBankData.h
    inc/MantidDataHandling/RawFileInfo.h
    inc/MantidDataHandling/ReadMaterial.h
    inc/MantidDataHandling/RemoveLogs.h
    inc/MantidDataHandling/RenameLog.h
    inc/MantidDataHandling/RotateInstrumentComponent.h
    inc/MantidDataHandling/RotateSource.h
    inc/MantidDataHandling/SampleEnvironmentFactory.h
    inc/MantidDataHandling/SampleEnvironmentSpec.h
    inc/MantidDataHandling/SampleEnvironmentSpecParser.h
    inc/MantidDataHandling/SaveAscii.h
    inc/MantidDataHandling/SaveAscii2.h
    inc/MantidDataHandling/SaveBankScatteringAngles.h
    inc/MantidDataHandling/SaveCSV.h
    inc/MantidDataHandling/SaveCalFile.h
    inc/MantidDataHandling/SaveCanSAS1D.h
    inc/MantidDataHandling/SaveCanSAS1D2.h
    inc/MantidDataHandling/SaveDaveGrp.h
    inc/MantidDataHandling/SaveDetectorsGrouping.h
    inc/MantidDataHandling/SaveDiffCal.h
    inc/MantidDataHandling/SaveDiffFittingAscii.h
    inc/MantidDataHandling/SaveDspacemap.h
    inc/MantidDataHandling/SaveFITS.h
    inc/MantidDataHandling/SaveFocusedXYE.h
    inc/MantidDataHandling/SaveFullprofResolution.h
    inc/MantidDataHandling/SaveGDA.h
    inc/MantidDataHandling/SaveGSASInstrumentFile.h
    inc/MantidDataHandling/SaveGSS.h
    inc/MantidDataHandling/SaveISISNexus.h
    inc/MantidDataHandling/SaveIsawDetCal.h
    inc/MantidDataHandling/SaveMask.h
    inc/MantidDataHandling/SaveNISTDAT.h
    inc/MantidDataHandling/SaveNXSPE.h
    inc/MantidDataHandling/SaveNXTomo.h
    inc/MantidDataHandling/SaveNXcanSAS.h
    inc/MantidDataHandling/SaveNexus.h
    inc/MantidDataHandling/SaveNexusESS.h
    inc/MantidDataHandling/SaveNexusGeometry.h
    inc/MantidDataHandling/SaveNexusProcessed.h
    inc/MantidDataHandling/SaveOpenGenieAscii.h
    inc/MantidDataHandling/SavePAR.h
    inc/MantidDataHandling/SavePDFGui.h
    inc/MantidDataHandling/SavePHX.h
    inc/MantidDataHandling/SaveParameterFile.h
    inc/MantidDataHandling/SaveRKH.h
    inc/MantidDataHandling/SaveRMCProfile.h
    inc/MantidDataHandling/SaveSESANS.h
    inc/MantidDataHandling/SaveSPE.h
    inc/MantidDataHandling/SaveSampleEnvironmentAndShape.h
    inc/MantidDataHandling/SaveStl.h
    inc/MantidDataHandling/SaveTBL.h
    inc/MantidDataHandling/SaveToSNSHistogramNexus.h
    inc/MantidDataHandling/SaveVTK.h
    inc/MantidDataHandling/SetBeam.h
    inc/MantidDataHandling/SetSample.h
    inc/MantidDataHandling/SetSampleMaterial.h
    inc/MantidDataHandling/SetScalingPSD.h
    inc/MantidDataHandling/SortTableWorkspace.h
    inc/MantidDataHandling/StartAndEndTimeFromNexusFileExtractor.h
    inc/MantidDataHandling/UpdateInstrumentFromFile.h
    inc/MantidDataHandling/XmlHandler.h
    src/LoadRaw/byte_rel_comp.h
    src/LoadRaw/isisraw.h
    src/LoadRaw/isisraw2.h
    src/LoadRaw/item_struct.h
    src/LoadRaw/vms_convert.h)

set(TEST_FILES
    AppendGeometryToSNSNexusTest.h
    CheckMantidVersionTest.h
    CompressEventsTest.h
    CreateChunkingFromInstrumentTest.h
    CreateSampleShapeTest.h
    CreateSimulationWorkspaceTest.h
    DataBlockCompositeTest.h
    DataBlockGeneratorTest.h
    DataBlockTest.h
    DefineGaugeVolumeTest.h
    DeleteTableRowsTest.h
    DetermineChunkingTest.h
    DownloadFileTest.h
    DownloadInstrumentTest.h
    EventWorkspaceCollectionTest.h
    ExtractMonitorWorkspaceTest.h
    ExtractPolarizationEfficienciesTest.h
    FilterEventsByLogValuePreNexusTest.h
    FindDetectorsInShapeTest.h
    FindDetectorsParTest.h
    GenerateGroupingPowderTest.h
    GroupDetectors2Test.h
    GroupDetectorsTest.h
    H5UtilTest.h
    ISISDataArchiveTest.h
    ISISJournalTest.h
    InstrumentRayTracerTest.h
    LoadAscii2Test.h
    LoadAsciiStlTest.h
    LoadAsciiTest.h
    LoadBBYTest.h
    LoadBinaryStlTest.h
    LoadCalFileTest.h
    LoadCanSAS1dTest.h
    LoadDaveGrpTest.h
    LoadDetectorInfoTest.h
    LoadDetectorsGroupingFileTest.h
    LoadDiffCalTest.h
    LoadDspacemapTest.h
    LoadEMUauTest.h
    LoadEmptyInstrumentTest.h
    LoadEventNexusIndexSetupTest.h
    LoadEventNexusTest.h
    LoadEventPreNexus2Test.h
    LoadFITSTest.h
    LoadFullprofResolutionTest.h
    LoadGSASInstrumentFileTest.h
    LoadGSSTest.h
    LoadHFIRSANSTest.h
    LoadIDFFromNexusTest.h
    LoadILLDiffractionTest.h
    LoadILLIndirect2Test.h
    LoadILLSANSTest.h
    LoadILLTOF2Test.h
    LoadILLTest.h
    LoadISISNexusTest.h
    LoadInstrumentFromNexusTest.h
    LoadInstrumentFromRawTest.h
    LoadInstrumentTest.h
    LoadIsawDetCalTest.h
    LoadLLBTest.h
    LoadLogTest.h
    LoadMLZTest.h
    LoadMappingTableTest.h
    LoadMaskTest.h
    LoadMcStasNexusTest.h
    LoadMcStasTest.h
    LoadMuonLogTest.h
    LoadMuonNexus1Test.h
    LoadMuonNexus2Test.h
    LoadNGEMTest.h
    LoadNXSPETest.h
    LoadNXcanSASTest.h
    LoadNexusLogsTest.h
    LoadNexusMonitorsTest.h
    LoadNexusProcessed2Test.h
    LoadNexusProcessedTest.h
    LoadNexusTest.h
    LoadPDFgetNFileTest.h
    LoadPLNTest.h
    LoadPSIMuonBinTest.h
    LoadParameterFileTest.h
    LoadPreNexusMonitorsTest.h
    LoadPreNexusTest.h
    LoadQKKTest.h
    LoadRKHTest.h
    LoadRaw3Test.h
    LoadRawBin0Test.h
    LoadRawSaveNxsLoadNxsTest.h
    LoadRawSpectrum0Test.h
    LoadSESANSTest.h
    LoadSINQFocusTest.h
    LoadSNSspecTest.h
    LoadSPETest.h
    LoadSampleDetailsFromRawTest.h
    LoadSampleEnvironmentTest.h
    LoadSampleShapeTest.h
    LoadSassenaTest.h
    LoadSaveAsciiTest.h
    LoadSpecTest.h
    LoadSpice2dTest.h
    LoadSpiceAsciiTest.h
    LoadSpiceXML2DDetTest.h
    LoadStlTest.h
    LoadSwansTest.h
    LoadTBLTest.h
    LoadTOFRawNexusTest.h
    LoadTest.h
    MaskDetectorsInShapeTest.h
    MaskDetectorsTest.h
    MaskSpectraTest.h
    MeshFileIOTest.h
    ModifyDetectorDotDatFileTest.h
    MoveInstrumentComponentTest.h
    NexusTesterTest.h
    ORNLDataArchiveTest.h
    PDLoadCharacterizationsTest.h
    RawFileInfoTest.h
    ReadMaterialTest.h
    RemoveLogsTest.h
    RenameLogTest.h
    RotateInstrumentComponentTest.h
    RotateSourceTest.h
    SampleEnvironmentFactoryTest.h
    SampleEnvironmentSpecFileFinderTest.h
    SampleEnvironmentSpecParserTest.h
    SampleEnvironmentSpecTest.h
    SaveAscii2Test.h
    SaveAsciiTest.h
    SaveBankScatteringAnglesTest.h
    SaveCSVTest.h
    SaveCalFileTest.h
    SaveCanSAS1dTest.h
    SaveCanSAS1dTest2.h
    SaveDaveGrpTest.h
    SaveDetectorsGroupingTest.h
    SaveDiffCalTest.h
    SaveDspacemapTest.h
    SaveFITSTest.h
    SaveFocusedXYETest.h
    SaveFullprofResolutionTest.h
    SaveGDATest.h
    SaveGSASInstrumentFileTest.h
    SaveGSSTest.h
    SaveIsawDetCalTest.h
    SaveMaskTest.h
    SaveNISTDATTest.h
    SaveNXSPETest.h
    SaveNXTomoTest.h
    SaveNXcanSASTest.h
    SaveNexusESSTest.h
    SaveNexusGeometryTest.h
    SaveNexusProcessedTest.h
    SaveNexusTest.h
    SaveOpenGenieAsciiTest.h
    SavePARTest.h
    SavePDFGuiTest.h
    SavePHXTest.h
    SaveParameterFileTest.h
    SaveRKHTest.h
    SaveRMCProfileTest.h
    SaveSESANSTest.h
    SaveSPETest.h
    SaveSampleEnvironmentAndShapeTest.h
    SaveStlTest.h
    SaveTBLTest.h
    SaveToSNSHistogramNexusTest.h
    SetBeamTest.h
    SetSampleMaterialTest.h
    SetSampleTest.h
    SetScalingPSDTest.h
    SortTableWorkspaceTest.h
    StartAndEndTimeFromNexusFileExtractorTest.h
    UpdateInstrumentFromFileTest.h
    XMLInstrumentParameterTest.h)

if(COVERALLS)
  foreach(loop_var ${SRC_FILES} ${INC_FILES})
    set_property(GLOBAL APPEND
                 PROPERTY COVERAGE_SRCS
                          "${CMAKE_CURRENT_SOURCE_DIR}/${loop_var}")
  endforeach(loop_var)
endif()

if(UNITY_BUILD)
  include(UnityBuild)
  enable_unity_build(DataHandling SRC_FILES SRC_UNITY_IGNORE_FILES 10)
endif(UNITY_BUILD)

# Use a precompiled header where they are supported
enable_precompiled_headers(inc/MantidDataHandling/PrecompiledHeader.h SRC_FILES)
# Add the target for this directory
add_library(DataHandling ${SRC_FILES} ${INC_FILES})
# Set the name of the generated library
set_target_properties(DataHandling
                      PROPERTIES OUTPUT_NAME
                                 MantidDataHandling
                                 COMPILE_DEFINITIONS
                                 "IN_MANTID_DATAHANDLING")

if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
  set_target_properties(DataHandling
                        PROPERTIES INSTALL_RPATH
                                   "@loader_path/../Contents/MacOS")
elseif(${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
  set_target_properties(
    DataHandling
    PROPERTIES INSTALL_RPATH "\$ORIGIN/../${LIB_DIR};\$ORIGIN/../${PLUGINS_DIR}"
    )
endif()

# Add to the 'Framework' group in VS
set_property(TARGET DataHandling PROPERTY FOLDER "MantidFramework")

target_include_directories(DataHandling PUBLIC inc ../Nexus/inc)
target_include_directories(DataHandling SYSTEM PRIVATE ${HDF5_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS})

target_link_libraries(DataHandling
                      LINK_PRIVATE
                      ${TCMALLOC_LIBRARIES_LINKTIME}
                      ${MANTIDLIBS}
                      Nexus
                      HistogramData
                      DataObjects
                      ${NEXUS_LIBRARIES}
                      ${HDF5_LIBRARIES}
                      ${HDF5_HL_LIBRARIES}
                      ${JSONCPP_LIBRARIES}
                      Catalog)

# Add the unit tests directory
add_subdirectory(test)

# Installation settings

mtd_install_targets(TARGETS
                    DataHandling
                    INSTALL_DIRS
                    ${PLUGINS_DIR}
                    ${WORKBENCH_PLUGINS_DIR})
